Complete api and exe implementation
completed api endpoints for
 -  interviewers
 -  candidates
 -  interview_slots
 -  interviewer availability
 -  candidate requests

created spec file to build executable.
added swagger-ui templates to make it work
in executable file (dist/setup).
