# api.yaml
@@ -8,7 +8,7 @@ consumes:
 produces:
   - "application/json"
 
-basePath: "/api"
+basePath: "/api/v1"
 
 # Paths supported by the server application
 paths:
@@ -29,6 +29,8 @@ paths:
                 first_name:
                   type: "string"
                 last_name:
+                  type: "string"
+                email:
                   type: "string"
                 date_created:
                   type: "string"
@@ -55,6 +57,9 @@ paths:
               last_name:
                 type: "string"
                 description: "Last name of interviewer to be created"
+              email:
+                type: "string"
+                description: "Email of interviewer to be created"
       responses:
         201:
           description: "Successful created new interviewer"
@@ -69,7 +74,7 @@ paths:
       parameters:
       - name: "obj_id"
         in: "path"
-        description: "Id of interview record"
+        description: "Id of interviewer record"
         type: "integer"
         required: True
       responses:
@@ -81,8 +86,8 @@ paths:
                 type: "string"
               last_name:
                 type: "string"
-              availability:
-                type: "object"
+              email:
+                type: "string"
               date_created:
                 type: "string"
               date_updated:
@@ -109,6 +114,8 @@ paths:
               type: "string"
             last_name:
               type: "string"
+            email:
+              type: "string"
 
       responses:
         200:
@@ -126,7 +133,7 @@ paths:
         type: "string"
         required: True
       responses:
-        200:
+        204:
           description: "Successfully deleted an interviewer record"
 
   /candidates:
@@ -147,6 +154,8 @@ paths:
                   type: "string"
                 last_name:
                   type: "string"
+                email:
+                  type: "string"
                 date_created:
                   type: "string"
                 date_updated:
@@ -159,7 +168,7 @@ paths:
       summary: "Insert a new row into the candidates table"
       description: "Create a new candidate"
       parameters:
-      - name: "candidate"
+      - name: "data"
         in: "body"
         description: "Candidate to create"
         required: True
@@ -172,6 +181,9 @@ paths:
             last_name:
               type: "string"
               description: "Last name of candidate to be created"
+            email:
+              type: "string"
+              description: "Email of candidate to be created"
       responses:
         201:
           description: "Successful created new candidate"
@@ -198,7 +210,9 @@ paths:
                 type: "string"
               last_name:
                 type: "string"
-              availability:
+              email:
+                type: "string"
+              requested_slot:
                 type: "object"
               date_created:
                 type: "string"
@@ -217,7 +231,7 @@ paths:
         description: "Id of candidate record"
         type: "integer"
         required: True
-      - name: "candidate"
+      - name: "data"
         in: "body"
         schema:
           type: "object"
@@ -225,6 +239,8 @@ paths:
             first_name:
               type: "string"
             last_name:
+              type: "string"
+            email:
               type: "string"
 
       responses:
@@ -243,99 +259,86 @@ paths:
         type: "string"
         required: True
       responses:
-        200:
+        204:
           description: "Successfully deleted an candidate record"
 
-  /interviews:
+  /interview-slots/{obj_id}:
     get:
-      operationId: "endpoints.interviews.all"
+      operationId: "endpoints.interview_slot.retrieve"
       tags:
-      - "interviews"
-      summary: "The interviews data structure supported by the server application"
-      description: "Retrieve list of interviews"
+      - "interview-slots"
+      summary: "Retrieve interview slots for candidate"
+      description: "Retrieve interview slots for candidate matching obj_id"
+      parameters:
+        - name: "obj_id"
+          in: "path"
+          description: "Id of candidate record"
+          type: "integer"
+          required: True
       responses:
         200:
-          description: "Successful retrieve interviews list operation"
+          description: "Successful retrieve candidates list operation"
           schema:
             type: "array"
             items:
               properties:
-                candidate:
-                  type: "object"
-                interview:
-                  type: "object"
-                calendar_date:
+                start_time:
+                  type: "string"
+                end_time:
+                  type: "string"
+                scheduled_date:
+                  type: "string"
+                is_booked:
+                  type: "boolean"
+                interviewer_id:
+                  type: "integer"
+                interviewer:
                   type: "object"
                 date_created:
                   type: "string"
                 date_updated:
                   type: "string"
 
-    post:
-      operationId: "endpoints.interviews.create"
-      tags:
-      - "interviews"
-      summary: "Insert a new row into the interviews table"
-      description: "Create a new interview"
-      parameters:
-      - name: "interview"
-        in: "body"
-        description: "Interview to create"
-        required: True
-        schema:
-          type: "object"
-          properties:
-            interviewer_email:
-              type: "string"
-              description: "Interviewer email of interview to be created"
-            candidate_email:
-              type: "string"
-              description: "Candidate email of interview to be created"
-            scheduled_date:
-              type: "string"
-      responses:
-        201:
-          description: "Successful created new interview"
-
-  /interviews/{obj_id}:
+  /interviewers/{obj_id}/availabilities:
     get:
-      operationId: "endpoints.interviews.get"
+      operationId: "endpoints.availability_slot.retrieve"
       tags:
-      - "interviews"
-      summary: "Retrieve interview record"
-      description: "Retrieve an interview record matching obj_id"
+      - "availability-slot"
+      summary: "Retrieve availability slots for interviewers"
+      description: "Retrieve availability slots for interviewers matching obj_id"
       parameters:
-      - name: "obj_id"
-        in: "path"
-        description: "Id of interview record"
-        type: "integer"
-        required: True
+        - name: "obj_id"
+          in: "path"
+          description: "Id of interviewer record"
+          type: "integer"
+          required: True
       responses:
         200:
-          description: "Successfully retrieved matching candidate record"
+          description: "Successful retrieve availability slots list operation"
           schema:
-            properties:
-              candidate:
-                type: "object"
-              interview:
-                type: "object"
-              calendar_date:
-                type: "object"
-              date_created:
-                type: "string"
-              date_updated:
-                type: "string"
-
-    put:
-      operationId: "endpoints.interviews.update"
+            type: "array"
+            items:
+              properties:
+                scheduled_date:
+                  type: "string"
+                start_time:
+                  type: "string"
+                end_time:
+                  type: "string"
+                date_created:
+                  type: "string"
+                date_updated:
+                  type: "string"
+    post:
+      operationId: "endpoints.availability_slot.create"
       tags:
-      - "interviews"
-      summary: "Update interview record"
-      description: "Update an candidate record matching obj_id"
+      - "availability-slot"
+      summary: "Create availability slot record"
+      description: "Create an availability slot record matching interviewer with id - obj_id"
       parameters:
       - name: "obj_id"
         in: "path"
-        description: "Id of interview record"
+        description: "Id of interviewer record"
         type: "integer"
         required: True
       - name: "candidate"
@@ -343,26 +346,134 @@ paths:
         schema:
           type: "object"
           properties:
-            first_name:
+            scheduled_date:
               type: "string"
-            last_name:
+            start_time:
+              type: "string"
+            end_time:
               type: "string"
 
       responses:
         200:
-          description: "Successfully updated candidate record"
+          description: "Successfully created an availability slot record"
 
     delete:
-      operationId: "endpoints.candidates.delete"
+      operationId: "endpoints.availability_slot.delete"
       tags:
-      - "candidates"
-      summary: "Delete candidate record"
-      description: "Delete an candidate record"
+      - "availability-slot"
+      summary: "Delete availability slot record"
+      description: "Delete an availability slot record matching availability slot with id - obj_id"
       parameters:
       - name: "obj_id"
         in: "path"
         type: "string"
         required: True
       responses:
+        204:
+          description: "Successfully deleted an availability slot record"
+
+  /interviewers/{obj_id}/range:
+    post:
+      operationId: "endpoints.availability_slot.create_range"
+      tags:
+      - "availability-slot"
+      summary: "Create availability slot record"
+      description: "Create an availability slot record matching candidate with id - obj_id"
+      parameters:
+      - name: "obj_id"
+        in: "path"
+        description: "Id of interviewer record"
+        type: "integer"
+        required: True
+      - name: "candidate"
+        in: "body"
+        schema:
+          type: "object"
+          properties:
+            start_date:
+              type: "string"
+            end_date:
+              type: "string"
+            start_time:
+              type: "string"
+            end_time:
+              type: "string"
+
+      responses:
         200:
-          description: "Successfully deleted an candidate record"
+          description: "Successfully created interview slot request"
+
+  /requested/{obj_id}:
+    post:
+      operationId: "endpoints.requested_slot.create"
+      tags:
+      - "requested_slot"
+      summary: "Create requested slot record"
+      description: "Create an requested slot record matching candidate with id - obj_id"
+      parameters:
+      - name: "obj_id"
+        in: "path"
+        description: "Id of candidate record"
+        type: "integer"
+        required: True
+      - name: "candidate"
+        in: "body"
+        schema:
+          type: "object"
+          properties:
+            scheduled_date:
+              type: "string"
+            start_time:
+              type: "string"
+            end_time:
+              type: "string"
+
+      responses:
+        200:
+          description: "Successfully created interview slot request"
+
+    delete:
+      operationId: "endpoints.requested_slot.delete"
+      tags:
+      - "requested_slot"
+      summary: "Delete requested slot record"
+      description: "Delete a requested slot record matching with id matching obj_id"
+      parameters:
+      - name: "obj_id"
+        in: "path"
+        type: "string"
+        required: True
+      responses:
+        204:
+          description: "Successfully deleted a requested slot record"
+
+  /requested/{obj_id}/range:
+    post:
+      operationId: "endpoints.requested_slot.create_range"
+      tags:
+      - "requested_slot"
+      summary: "Create requested slot record"
+      description: "Create an requested slot record matching candidate with id - obj_id"
+      parameters:
+      - name: "obj_id"
+        in: "path"
+        description: "Id of candidate record"
+        type: "integer"
+        required: True
+      - name: "candidate"
+        in: "body"
+        schema:
+          type: "object"
+          properties:
+            start_date:
+              type: "string"
+            end_date:
+              type: "string"
+            start_time:
+              type: "string"
+            end_time:
+              type: "string"
+
+      responses:
+        200:
+          description: "Successfully created interview slot request"
